--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
 
 Flask's success created a lot of additional work in issue tickets and pull requests. Armin eventually created The Pallets Projects collection of open source code libraries after he had been managing Flask under his own GitHub account for several years. The Pallets Project now serves as the community-driven organization that handles Flask and other related Python libraries such as Lektor, Jinja and several others.</p>
 
-<img src="https://naysan.ca/wp-content/uploads/2020/10/flask_banner.png">
+<img src="https://naysan.ca/wp-content/uploads/2020/10/flask_banner.png" alt="Flask">
 <h1 align="left">Features of Flask</h1>
 <ul align="left">
     <li>Integrated support for unit testing.</li>
