--- a/app/templates/basicform.html
+++ b/app/templates/basicform.html
@@ -5,11 +5,9 @@ Basic Form
 
 {% block content %}
 
-
-<h1>HTML Form</h1>
+<h1>Web Calculator</h1>
 
 <div class="container-fluid">
-
 
     <form action="basicform" method="POST" autocomplete="off">
         <label for="value1">Value 1:</label>
