--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,7 +24,7 @@ Flask's success created a lot of additional work in issue tickets and pull reque
     <li>Easily deployable in production</li>
 </ul>
 <h4 class="important">
-        Check <a href="/basicform">Basic Form</a> page here.
+        Check <a href="/basicform">Web Calculator</a> page here.
     </h4>
 {% endblock %}
 
