--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,19 +11,30 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <style>
+        body {
+            background-color: #e3f2fd;
+            font-family: Helvetica, sans-serif;
+        }
+        .footer {
+            position: relative;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 40px;
+            background-color: grey;
+            color: white;
+            text-align: center;
+            line-height: 2.5;
+        }
 
-    <title>Hello, world!</title>
+    </style>
 </head>
 <body>
 <div id="primary_container">
-    <nav class="navbar container-fluid navbar-expand-lg navbar-toggle">
-        <a class="navbar-brand" href="/">Project 3</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="nav navbar-nav ml-auto">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo" height="90" width="90">
+        <ul class="nav navbar-nav ml-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="/">Home</a>
                 </li>
@@ -31,6 +42,12 @@
                     <a class="nav-link" href="/basicform">Beautiful Tables</a>
                 </li>
             </ul>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+
         </div>
     </nav>
     <div class="container-fluid" id="content">
@@ -41,20 +58,20 @@
 
     </div>
 
-    <div id="footer">
-        {% block footer %}
-        <footer class="sticky-footer bg-dark container-fluid mt-auto">
-            <div class="container-fluid">
-                <div class="row text-center">
-                    <div class="col-md-12 col-sm-12 col-xs-12">
-                        <a class="text-lead">&copy; Umang Gandhi </a>
-                    </div>
-                </div>
-            </div>
-            {% endblock %}
-        </footer>
-    </div>
 </div>
+
+<!-- Start of Footer -->
+<div class="footer">
+    <p><small>&copy; Copyright 2021, Umang Gandhi</small></p>
+    <img src="static/images/GitHub-icon.png" alt="Github"><a href="https://github.com/umang4321/cal2_zeroexception1/tree/beautiful_tables" style="color: rgb(15, 15, 14)"> GitHub</a>
+</div>
+<!-- End of Footer -->
+
+
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
