updating previous files of project 1

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,6 +43,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/basicform">Calculator</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/evolution">Evolution</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/inventors">Inventors</a>
+                </li>
             </ul>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,7 +86,7 @@
 <!-- Start of Footer -->
 <div class="footer">
     <p><small>&copy; Copyright 2021, Umang Gandhi</small></p>
-    <img src="static/images/GitHub-icon.png" alt="Github"><a href="https://github.com/umang4321/cal2_zeroexception1/tree/beautiful_tables" style="color: rgb(15, 15, 14)"> GitHub</a>
+    <img src="static/images/GitHub-icon.png" alt="Github"><a href="https://github.com/umang4321/cal2_zeroexception1/tree/Project3" style="color: rgb(15, 15, 14)"> GitHub</a>
 </div>
 <!-- End of Footer -->
 
