--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -24,11 +24,9 @@
     </thead>
     <!--2-->
     <tbody>
-        {% set list1 = hist.split('\n') %}
-        {% for item in list1 %}
-        {% set subitem = item.split(',') %}
+        {% for subitem in hist %}
         <tr>
-            <td>{{ list1.index(item)+1 }}</td>
+            <td>{{ hist.index(subitem)+1 }}</td>
             <td>{{ subitem[0] }}</td>
             <td>{{ subitem[1] }}</td>
             <td>{{ subitem[2] }}</td>
