--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -52,6 +52,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/article1">OOP Principles</a>
                 </li>
+            <li class="nav-item">
+                    <a class="nav-link" href="/article2">AAA Testing</a>
+                </li>
             </ul>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
